# hmm-optimizer

./: .gitignore  LICENSE  MIGRATION_PLAN.md  README.md  pyproject.toml  train.py
configs/: baseline.yaml  debug.yaml  lvd.yaml  neural.yaml  neural_lvd.yaml
hmm_optimizer/: __init__.py  hmm.py  lvd.py  reparameterization.py
