[project]
name = "hmm-optimizer"
version = "0.1.0"
description = "Minimal implementation of HMM language models with neural reparameterization and LVD"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Ivan Lee"}]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "faiss-cpu>=1.7.0",
    "pyyaml>=6.0",
    "datasets>=2.0.0",
    "tqdm>=4.60.0",
    "transformers>=4.30.0",
]

[project.urls]
"Repository" = "https://github.com/ivnle/hmm-optimizer"
"Paper" = "https://aclanthology.org/2025.findings-naacl.429/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hmm_optimizer"]